--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
 
   <body>
   	<div class="container">
+	  	<ul class="nav nav-pills">
+		  <li role="presentation" class="active"><a href="#">Home</a></li>
+		  <li role="presentation"><a href="#">Products</a></li>
+		  <li role="presentation"><a href="#">Cart</a></li>
+		</ul>
+  	
     	<%= yield %>
 	</div>
   </body>
