--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,11 +3,12 @@
   <% @products.each do |product| %>
     <div class="col-md-4">
       <a href="/products/<%= product.id %>">
-        
-      <div class="info-background">
-        <p><%= product.title %></p>
-        <p><%= number_to_currency(product.price) %></p>
-      </div>
+        <div class="img-wrapper">
+          <img class="img-responsive" src="<%= product.image %>">
+        </div>
+		<div class="info-background">
+			<p><%= product.title %> - <%= number_to_currency(product.price) %></p>
+		</div>
       </a>
     </div>
   <% end %>
