--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Available Products</h1>
+<h1>
+    <% if current_user %>
+     Hi, <%= current_user.name %>! Here's your available products
+    <% else %>
+      Available Products
+    <% end %>
+</h1>
 <div class="row">
   <% @products.each do |product| %>
     <div class="col-md-4">
